--- a/Pipelines/Templates/update-deployment-settings.yml
+++ b/Pipelines/Templates/update-deployment-settings.yml
@@ -41,7 +41,7 @@ steps:
 - powershell: |
       # load PowerShell files into memory
       . "$env:POWERSHELLPATH/update-deployment-settings.ps1"
-      Set-DeploymentSettingsConfiguration '$(Build.SourcesDirectory)' '$(Build.Repository.Name)' '$(CdsBaseConnectionString)' '$(XrmDataPowerShellVersion)' '$(CoETools_Microsoft_Xrm_Data_PowerShell)' '${{parameters.orgUrl}}' '$(System.TeamProjectId)' '${{parameters.projectName}}' '${{parameters.repo}}' 'Bearer' '$env:SYSTEM_ACCESSTOKEN' '${{parameters.serviceConnection}}' '${{parameters.solutionName}}' '${{parameters.profileEnvironmentUrl}}' '${{parameters.profileId}}' '${{parameters.configurationData}}'
+      Set-DeploymentSettingsConfiguration '$(Build.SourcesDirectory)' '$(Build.Repository.Name)' '$(CdsBaseConnectionString)' '$(XrmDataPowerShellVersion)' '$(CoETools_Microsoft_Xrm_Data_PowerShell)' '${{parameters.orgUrl}}' '$(System.TeamProjectId)' '${{parameters.projectName}}' '${{parameters.repo}}' 'Bearer' $env:SYSTEM_ACCESSTOKEN '${{parameters.serviceConnection}}' '${{parameters.solutionName}}' '${{parameters.profileEnvironmentUrl}}' '${{parameters.profileId}}' '${{parameters.configurationData}}'
   env:
     SYSTEM_ACCESSTOKEN: $(System.AccessToken)
   displayName: 'Update Deployment Settings'
