--- a/Pipelines/Templates/export-Solution.yml
+++ b/Pipelines/Templates/export-Solution.yml
@@ -193,20 +193,20 @@ steps:
 # TEMPORARY until SolutionPackager supports formatting json files on unpack we
 # update all the json files to be pretty-print / formatted so they are easier to read in source control.
 # This also makes it easier to read changes from one commit to another
-- powershell: |
-   Get-ChildItem -Path "$(Build.SourcesDirectory)\${{parameters.repo}}\${{parameters.solutionName}}\SolutionPackage" -Recurse -Filter *.json | 
-   ForEach-Object {
-    #skip canvas app folder because canvas team already handles this for canvas unpack
-     if(-not $_.FullName.Contains('CanvasApps')) {
-       Write-Host $_.FullName
-       $formatted = jq . $_.FullName --sort-keys
-       $formatted | Out-File $_.FullName -Encoding UTF8
-     }
-   }
-   del $(Build.ArtifactStagingDirectory)\${{parameters.solutionName}}.zip
-   del $(Build.ArtifactStagingDirectory)\${{parameters.solutionName}}_managed.zip
-  displayName: 'Format JSON files'
-  enabled: true
+#- powershell: |
+#   Get-ChildItem -Path "$(Build.SourcesDirectory)\${{parameters.repo}}\${{parameters.solutionName}}\SolutionPackage" -Recurse -Filter *.json | 
+#   ForEach-Object {
+#    #skip canvas app folder because canvas team already handles this for canvas unpack
+#     if(-not $_.FullName.Contains('CanvasApps')) {
+#       Write-Host $_.FullName
+#       $formatted = jq . $_.FullName --sort-keys
+#       $formatted | Out-File $_.FullName -Encoding UTF8
+#     }
+#   }
+#   del $(Build.ArtifactStagingDirectory)\${{parameters.solutionName}}.zip
+#   del $(Build.ArtifactStagingDirectory)\${{parameters.solutionName}}_managed.zip
+#  displayName: 'Format JSON files'
+#  enabled: true
 
 # TEMPORARY until solution exports new business rules with non-empty GUIDs
 # We need to set empty GUIDs output when a business rule is first exported.  This is to ensure that
@@ -230,22 +230,9 @@ steps:
   displayName: 'Fix unset GUIDs in new Business Rules'
 
 - powershell: |
-   Get-ChildItem -Path "$(Build.SourcesDirectory)\${{parameters.repo}}\${{parameters.solutionName}}\SolutionPackage\Workflows" -Recurse -Filter *.xml | 
-   ForEach-Object {
-     $xml=[xml](Get-Content $_.FullName)
-     $workflowNode = $xml.SelectSingleNode("//Workflow")
-     $workflowNode.StateCode = '0'
-     $workflowNode.StatusCode = '1'
-     $xml.Save($_.FullName)
-   }
-  displayName: 'Conditionally Disable Flows'
-  condition: and(succeeded(), eq(variables.DisableFlows, 'true'))
-
-- powershell: |
    Get-ChildItem -Path "$(Build.SourcesDirectory)\${{parameters.repo}}\${{parameters.solutionName}}\SolutionPackage\environmentvariabledefinitions" -Recurse -Filter environmentvariablevalues.json | Remove-Item
   displayName: 'Verify Environment Variable Current Value Not Exported'
   condition: and(succeeded(), eq(variables.DoNotExportCurrentEnvironmentVariableValues, 'true'))
-
 
 - template: update-deployment-settings.yml
   parameters:
@@ -259,11 +246,22 @@ steps:
     configurationData: '${{parameters.configurationData}}'
     generateEnvironmentVariables: $(DeploymentSettings.GenerateEnvironmentVariables)
     generateConnectionReferences: $(DeploymentSettings.GenerateConnectionReferences)
-    generateOwnershipConfig: $(DeploymentSettings.GenerateFlowOwnership)
+    generateFlowConfig: $(DeploymentSettings.GenerateFlowOwnership)
     generateCanvasSharingConfig: $(DeploymentSettings.GenerateCanvasAppSharing)
     generateAADGroupTeamConfig: $(DeploymentSettings.GenerateAADGroupTeam)
     generateCustomConnectorConfig: $(DeploymentSettings.GenerateCustomConnectorConfig)
-    overwriteExisting: $(DeploymentSettings.OverwriteExistingFiles)
+
+- powershell: |
+   Get-ChildItem -Path "$(Build.SourcesDirectory)\${{parameters.repo}}\${{parameters.solutionName}}\SolutionPackage\Workflows" -Recurse -Filter *.xml | 
+   ForEach-Object {
+     $xml=[xml](Get-Content $_.FullName)
+     $workflowNode = $xml.SelectSingleNode("//Workflow")
+     $workflowNode.StateCode = '0'
+     $workflowNode.StatusCode = '1'
+     $xml.Save($_.FullName)
+   }
+  displayName: 'Conditionally Disable All Flows'
+  condition: and(succeeded(), eq(variables.DisableFlows, 'true'))
 
 # Set paths to deployment settings
 - template: set-deployment-configuration-paths.yml
