--- a/Pipelines/Templates/update-solution-component-ownership.yml
+++ b/Pipelines/Templates/update-solution-component-ownership.yml
@@ -30,8 +30,13 @@ steps:
     #    }
     #]
     $config = ConvertFrom-Json '${{parameters.solutionComponentOwnershipConfiguration}}'
-    #$config = ConvertFrom-Json '[{"solutionComponentType": 29,"solutionComponentUniqueName": "bd40f612-41ff-ea11-a815-000d3a1abe26","ownerEmail": "jonis@pplatform.onmicrosoft.com"}]'
-    
+    if('${{parameters.enableFlows}}' -ne "false") {
+        # Retrieve the activation config to use when activating flows for owners
+        $activationConfigs = ConvertFrom-Json '$(outActivateFlows.outActivateFlows)'
+        $activationConfigs | Sort-Object [int]sortOrder
+
+        $flowsToActivate = [System.Collections.ArrayList]@()
+    }
     # Workflows of type Modern Flow might need an interactive user owner.
     # One example is where you want the Flow that runs to use that users license entitlements.
     # Currently only implementing workflow ownership change until we indentify real usage scenarios for other solution components needing ownership change post import.
@@ -44,7 +49,7 @@ steps:
             # Workflow 
             29 {  
                 Write-Host "Retrieving Workflow Record"
-                $workflow = Get-CrmRecord -conn $conn -EntityLogicalName workflow -Id $ownershipConfig.solutionComponentUniqueName -Fields clientdata,category,statecode
+                $workflow = Get-CrmRecord -conn $conn -EntityLogicalName workflow -Id $ownershipConfig.solutionComponentUniqueName -Fields name, clientdata,category,statecode
             } 
             default {
               Write-Host "##vso[task.logissue type=warning]NOT IMPLEMENTED - You supplied a solutionComponentType of $ownershipConfig.solutionComponentType for solutionComponentUniqueName $solutionComponentUniqueName"
@@ -68,7 +73,7 @@ steps:
                     Set-CrmRecordState -conn $impersonationConn -EntityLogicalName workflow -Id $ownershipConfig.solutionComponentUniqueName -StateCode 0 -StatusCode 1
                     $workflowDeactivated = $true
                 }
-                Write-Host "Updating Record Owner"
+                Write-Host "Setting flow owner $ownershipConfig.solutionComponentUniqueName with $systemUserId"
                 Set-CrmRecordOwner -conn $conn $workflow $systemUserId
               }
           }
@@ -77,14 +82,31 @@ steps:
           }
           #Activate the workflow using the owner.
           if(($workflow.statecode_Property.Value -ne 1 -or $workflowDeactivated) -and '${{parameters.enableFlows}}' -ne "false"){
-            $impersonationConn = Get-CrmConnection -ConnectionString "$(CdsBaseConnectionString)${{parameters.serviceConnection}}"
-            $impersonationCallerId = $systemUserId
-            $impersonationConn.OrganizationWebProxyClient.CallerId = $impersonationCallerId 
-            Write-Host "Enabling Flows"
-            Set-CrmRecordState -conn $impersonationConn -EntityLogicalName workflow -Id $ownershipConfig.solutionComponentUniqueName -StateCode 1 -StatusCode 2
+
+            Write-Host "Retrieving activation config"
+            $activationConfig = $activationConfigs | Where-Object { $_.solutionComponentUniqueName -eq $ownershipConfig.solutionComponentUniqueName } | Select-Object -First 1
+            if($activationConfig.activate -ne 'false') {
+                Write-Host "Adding flow " $ownershipConfig.solutionComponentName " to activation collection"
+                $flowActivation = [PSCustomObject]@{}
+                $flowActivation | Add-Member -MemberType NoteProperty -Name 'solutionComponent' -Value $workflow
+                $flowActivation | Add-Member -MemberType NoteProperty -Name 'impersonationCallerId' -Value $systemUserId
+                $flowActivation | Add-Member -MemberType NoteProperty -Name 'sortOrder' -Value $activationConfig.sortOrder
+                $flowsToActivate.Add($flowActivation)
+            }
           }
       }
     }
+    if('${{parameters.enableFlows}}' -ne "false") {
+
+        #Activate any flows added to the collection based on sort order
+        $flowsToActivate | Sort-Object [int]sortOrder
+        foreach($flowToActivate in $flowsToActivate) {
+            Write-Host "Activating Flow: " $flowToActivate.solutionComponent.name
+            $impersonationConn.OrganizationWebProxyClient.CallerId = $flowToActivate.impersonationCallerId 
+            Set-CrmRecordState -conn $impersonationConn -EntityLogicalName workflow -Id $flowToActivate.solutionComponent.workflowid -StateCode 1 -StatusCode 2
+        }
+    }
+
     
   displayName: '${{parameters.displayName}}'
   condition: and(succeeded(), ne('${{parameters.solutionComponentOwnershipConfiguration}}', ''))
