--- a/Pipelines/Templates/activate-flows.yml
+++ b/Pipelines/Templates/activate-flows.yml
@@ -7,23 +7,17 @@ parameters:
   type: string
 - name: connectionReferences
   type: string
+- name: activateFlowConfiguration
+  type: string
 
 steps:
-- template: set-deployment-variable.yml
-  parameters:
-    variableName: 'outActivateFlows'
-    pipelineVariableValue: ''
-    deploymentSettingsPath: $(CustomDeploymentSettingsPath)
-    deploymentSettingsNode: 'ActivateFlowConfiguration'
-    displayName: 'Retrieve Flow Activation Config'
-
 # Enable a specific list of 'child' flows that must be turned on before their parent flows.
 - powershell: |
     $microsoftXrmDataPowerShellModule = '$(CoETools_Microsoft_Xrm_Data_PowerShell)'
     Import-Module $microsoftXrmDataPowerShellModule -Force -RequiredVersion $(XrmDataPowerShellVersion) -ArgumentList @{ NonInteractive = $true }
     $conn = Get-CrmConnection -ConnectionString "$(CdsBaseConnectionString)${{parameters.serviceConnection}}"
 
-    $activationConfig = ConvertFrom-Json '$(outActivateFlows.outActivateFlows)'
+    $activationConfig = ConvertFrom-Json '${{parameters.activateFlowConfiguration}}'
     $activationConfig | Sort-Object [int]sortOrder
 
     # json config value must follow this format
@@ -37,9 +31,6 @@ steps:
     #        "activateAsUser": "username@yourdomain.com"
     #    }
     #]
-    $config = ConvertFrom-Json '$(outActivateFlows.outActivateFlows)'
-    #$config = ConvertFrom-Json '[{"solutionComponentUniqueName": "bd40f612-41ff-ea11-a815-000d3a1abe26","activateAsUser": "jonis@pplatform.onmicrosoft.com"}]'
-    
     # Turn on specified list of flows using a specified user.
     # This should be an ordered list of flows that must be turned on before any other dependent (parent) flows can be turned on.
     # The remaining flows will be turned by the next following 'Enable flows based on connection references' task
@@ -65,7 +56,7 @@ steps:
         }
     }
   displayName: 'Activate Flows for Configuration'
-  condition: and(succeeded(), ne(variables['EnableFlows'], 'false'), ne('$(outActivateFlows.outActivateFlows)', ''))
+  condition: and(succeeded(), ne(variables['EnableFlows'], 'false'), ne('${{parameters.activateFlowConfiguration}}', ''))
 
 # Enable flows based on connection references
 # Flows can only be turned on if the user turning them on has permissions to connections being referenced by the connection reference
@@ -100,7 +91,7 @@ steps:
             $config = ConvertFrom-Json '${{parameters.connectionReferences}}'
 
             # Retrieve the activation config to use when activating flows for connection references
-            $activationConfigs = ConvertFrom-Json '$(outActivateFlows.outActivateFlows)'
+            $activationConfigs = ConvertFrom-Json '${{parameters.activateFlowConfiguration}}'
             $activationConfigs | Sort-Object [int]sortOrder
 
             $flowsToActivate = [System.Collections.ArrayList]@()
@@ -182,7 +173,7 @@ steps:
         }
     }
   displayName: 'Activate Flows for Connection References'
-  condition: and(succeeded(), ne(variables['EnableFlows'], 'false'), ne('$(outConnectionReferences.outConnectionReferences)', ''))
+  condition: and(succeeded(), ne(variables['EnableFlows'], 'false'), ne('$(outConnectionReferences)', ''))
 
 # Enable flows based on ownership
 - template: update-solution-component-ownership.yml
@@ -190,6 +181,7 @@ steps:
     displayName: 'Activate Flows for Component Owners'
     serviceConnection: '${{parameters.serviceConnection}}'
     solutionComponentOwnershipConfiguration: '${{parameters.solutionComponentOwnershipConfiguration}}'
+    activateFlowConfiguration: '${{parameters.activateFlowConfiguration}}'
     enableFlows: '$(EnableFlows)'
     updateComponentOnwership: 'false'
 
