--- a/Pipelines/Templates/deploy-Solution.yml
+++ b/Pipelines/Templates/deploy-Solution.yml
@@ -263,6 +263,15 @@ steps:
   condition: and(succeeded(), eq('${{parameters.importUnmanaged}}', 'true'))
   # Only publish customizations for when importing unmanaged solutions into a dev environment.
 
+# Set deployment variable for Activate Flow Configuration
+- template: set-deployment-variable.yml
+  parameters:
+    variableName: 'outActivateFlows'
+    pipelineVariableValue: ''
+    deploymentSettingsPath: $(CustomDeploymentSettingsPath)
+    deploymentSettingsNode: 'ActivateFlowConfiguration'
+    displayName: 'Retrieve Flow Activation Config for Deploy'
+
 # Set deployment variable for AAD Group Team Configuration
 - template: set-deployment-variable.yml
   parameters:
@@ -270,12 +279,12 @@ steps:
     pipelineVariableValue: '${{parameters.aadGroupTeamConfiguration}}'
     deploymentSettingsPath: $(CustomDeploymentSettingsPath)
     deploymentSettingsNode: 'AadGroupTeamConfiguration'
-    displayName: 'Retrieve AAD Group Team Config'
+    displayName: 'Retrieve AAD Group Team Config for Deploy'
 
 - template: set-dataverse-aad-group-teams.yml
   parameters:
     serviceConnection: '${{parameters.serviceConnection}}'
-    aadGroupTeamConfiguration: '$(outAadGroupTeamConfiguration.outAadGroupTeamConfiguration)'
+    aadGroupTeamConfiguration: '$(outAadGroupTeamConfiguration)'
 
 - template: set-deployment-variable.yml
   parameters:
@@ -283,12 +292,12 @@ steps:
     pipelineVariableValue: '${{parameters.aadGroupCanvasConfiguration}}'
     deploymentSettingsPath: $(CustomDeploymentSettingsPath)
     deploymentSettingsNode: 'AadGroupCanvasConfiguration'
-    displayName: 'Retrieve AAD Group Canvas Config'
+    displayName: 'Retrieve AAD Group Canvas Config for Deploy'
 
 - template: share-canvas-app-with-aad-group.yml
   parameters:
     serviceConnection: '${{parameters.serviceConnection}}'
-    aadGroupCanvasConfiguration: '$(outAadGroupCanvasConfiguration.outAadGroupCanvasConfiguration)'
+    aadGroupCanvasConfiguration: '$(outAadGroupCanvasConfiguration)'
 
 - template: set-deployment-variable.yml
   parameters:
@@ -296,13 +305,14 @@ steps:
     pipelineVariableValue: '${{parameters.solutionComponentOwnershipConfiguration}}'
     deploymentSettingsPath: $(CustomDeploymentSettingsPath)
     deploymentSettingsNode: 'SolutionComponentOwnershipConfiguration'
-    displayName: 'Retrieve Solution Component Onwership Config'
+    displayName: 'Retrieve Solution Component Onwership Config for Deploy'
 
 - template: update-solution-component-ownership.yml
   parameters:
     displayName: 'Update Solution Component Ownwership'
     serviceConnection: '${{parameters.serviceConnection}}'
-    solutionComponentOwnershipConfiguration: '$(outSolutionComponentOwnershipConfiguration.outSolutionComponentOwnershipConfiguration)'
+    solutionComponentOwnershipConfiguration: '$(outSolutionComponentOwnershipConfiguration)'
+    activateFlowConfiguration: '$(outActivateFlows)'
     enableFlows: 'false'
     updateComponentOnwership: 'true'
 
@@ -312,14 +322,15 @@ steps:
     pipelineVariableValue: '${{parameters.connectionReferences}}'
     deploymentSettingsPath: $(DeploymentSettingsPath)
     deploymentSettingsNode: 'ConnectionReferences'
-    displayName: 'Retrieve Connection Reference Config'
+    displayName: 'Retrieve Connection Reference Config for Deploy'
 
 - template: activate-flows.yml
   parameters:
     displayName: 'Activate Flows'
     serviceConnection: '${{parameters.serviceConnection}}'
-    connectionReferences: '$(outConnectionReferences.outConnectionReferences)'
-    solutionComponentOwnershipConfiguration: '$(outSolutionComponentOwnershipConfiguration.outSolutionComponentOwnershipConfiguration)'
+    connectionReferences: '$(outConnectionReferences)'
+    solutionComponentOwnershipConfiguration: '$(outSolutionComponentOwnershipConfiguration)'
+    activateFlowConfiguration: '$(outActivateFlows)'
 
 - template: set-deployment-variable.yml
   parameters:
@@ -327,12 +338,12 @@ steps:
     pipelineVariableValue: 'no-op'
     deploymentSettingsPath: $(CustomDeploymentSettingsPath)
     deploymentSettingsNode: 'FlowShareWithGroupTeamConfiguration'
-    displayName: 'Retrieve Flow Share with Group Team Configuration'
+    displayName: 'Retrieve Flow Share with Group Team Configuration for Deploy'
 
 - template: share-flows-with-group-team.yml
   parameters:
     serviceConnection: '${{parameters.serviceConnection}}'
-    flowShareWithGroupTeamConfiguration: '$(outFlowShareWithGroupTeamConfiguration.outFlowShareWithGroupTeamConfiguration)'
+    flowShareWithGroupTeamConfiguration: '$(outFlowShareWithGroupTeamConfiguration)'
 
 - template: set-deployment-variable.yml
   parameters:
@@ -340,12 +351,12 @@ steps:
     pipelineVariableValue: 'no-op'
     deploymentSettingsPath: $(CustomDeploymentSettingsPath)
     deploymentSettingsNode: 'ConnectorShareWithGroupTeamConfiguration'
-    displayName: 'Retrieve Connector Share with Group Team Configuration'
+    displayName: 'Retrieve Connector Share with Group Team Configuration for Deploy'
 
 - template: share-connectors-with-group-team.yml
   parameters:
     serviceConnection: '${{parameters.serviceConnection}}'
-    connectorShareWithGroupTeamConfiguration: '$(outConnectorShareWithGroupTeamConfiguration.outConnectorShareWithGroupTeamConfiguration)'
+    connectorShareWithGroupTeamConfiguration: '$(outConnectorShareWithGroupTeamConfiguration)'
 
 - template: import-configuration-migration-data.yml
   parameters:
