--- a/Pipelines/Templates/export-Solution.yml
+++ b/Pipelines/Templates/export-Solution.yml
@@ -192,24 +192,6 @@ steps:
   displayName: 'Clear contents of *_connectionparameters.json files'
   enabled: true
 
-# TEMPORARY until SolutionPackager supports formatting json files on unpack we
-# update all the json files to be pretty-print / formatted so they are easier to read in source control.
-# This also makes it easier to read changes from one commit to another
-#- powershell: |
-#   Get-ChildItem -Path "$(Build.SourcesDirectory)\${{parameters.repo}}\${{parameters.solutionName}}\SolutionPackage" -Recurse -Filter *.json | 
-#   ForEach-Object {
-#    #skip canvas app folder because canvas team already handles this for canvas unpack
-#     if(-not $_.FullName.Contains('CanvasApps')) {
-#       Write-Host $_.FullName
-#       $formatted = jq . $_.FullName --sort-keys
-#       $formatted | Out-File $_.FullName -Encoding UTF8
-#     }
-#   }
-#   del $(Build.ArtifactStagingDirectory)\${{parameters.solutionName}}.zip
-#   del $(Build.ArtifactStagingDirectory)\${{parameters.solutionName}}_managed.zip
-#  displayName: 'Format JSON files'
-#  enabled: true
-
 # TEMPORARY until solution exports new business rules with non-empty GUIDs
 # We need to set empty GUIDs output when a business rule is first exported.  This is to ensure that
 # there aren't noisy diffs when the business rule is subsequently imported and exported.
@@ -236,6 +218,13 @@ steps:
   displayName: 'Verify Environment Variable Current Value Not Exported'
   condition: and(succeeded(), eq(variables.DoNotExportCurrentEnvironmentVariableValues, 'true'))
 
+# Set paths to deployment settings
+- template: set-deployment-configuration-paths.yml
+  parameters:
+    configPath: '$(Build.SourcesDirectory)\${{parameters.repo}}\${{parameters.solutionName}}\config\'
+    environmentName: ''
+ 
+# Update deployment settings configuration
 - template: update-deployment-settings.yml
   parameters:
     orgUrl: '$(System.TeamFoundationCollectionUri)'
@@ -253,23 +242,14 @@ steps:
     generateAADGroupTeamConfig: $(DeploymentSettings.GenerateAADGroupTeam)
     generateCustomConnectorConfig: $(DeploymentSettings.GenerateCustomConnectorConfig)
 
-- powershell: |
-   Get-ChildItem -Path "$(Build.SourcesDirectory)\${{parameters.repo}}\${{parameters.solutionName}}\SolutionPackage\Workflows" -Recurse -Filter *.xml | 
-   ForEach-Object {
-     $xml=[xml](Get-Content $_.FullName)
-     $workflowNode = $xml.SelectSingleNode("//Workflow")
-     $workflowNode.StateCode = '0'
-     $workflowNode.StatusCode = '1'
-     $xml.Save($_.FullName)
-   }
-  displayName: 'Conditionally Disable All Flows'
-  condition: and(succeeded(), eq(variables.DisableFlows, 'true'))
-
-# Set paths to deployment settings
-- template: set-deployment-configuration-paths.yml
+# Enabled or Disable Flows in the Solution based on configuration
+- template: enable-disable-solution-flows.yml
   parameters:
-    configPath: '$(Build.SourcesDirectory)\${{parameters.repo}}\${{parameters.solutionName}}\config\'
-    environmentName: ''
+    buildSourceDirectory: '$(Build.SourcesDirectory)'
+    repo: '${{parameters.repo}}'
+    solutionName: '${{parameters.solutionName}}'
+    disableAllFlows: '$(DisableFlows)'
+    activateFlowConfiguration: '$(outActivateFlows)'
 
 # Set deployment variable for default environment variables
 - template: set-deployment-variable.yml
@@ -278,11 +258,11 @@ steps:
     pipelineVariableValue: ''
     deploymentSettingsPath: $(CustomDeploymentSettingsPath)
     deploymentSettingsNode: 'DefaultEnvironmentVariables'
-    displayName: 'Retrieve Default Environment Variable Config'
+    displayName: 'Retrieve Default Environment Variable Config for Export'
 
 - powershell: |
-   if('$(outDefaultEnvironmentVariables.outDefaultEnvironmentVariables)' -ne '') {
-       $config = ConvertFrom-Json '$(outDefaultEnvironmentVariables.outDefaultEnvironmentVariables)'
+   if('$(outDefaultEnvironmentVariables)' -ne '') {
+       $config = ConvertFrom-Json '$(outDefaultEnvironmentVariables)'
        foreach ($c in $config) {
            $envVariableName = $c[0]
            Get-ChildItem -Path "$(Build.SourcesDirectory)\${{parameters.repo}}\${{parameters.solutionName}}\SolutionPackage\environmentvariabledefinitions\$envVariableName\environmentvariabledefinition.xml" | 
@@ -304,7 +284,6 @@ steps:
     }
   displayName: 'Verify Default Environment Variables Are Set'
   condition: and(succeeded(), eq(variables.VerifyDefaultEnvironmentVariableValues, 'true'))
-
 
 - powershell: |
     git add --all
