--- a/Pipelines/Templates/export-Solution.yml
+++ b/Pipelines/Templates/export-Solution.yml
@@ -186,6 +186,12 @@ steps:
   displayName: 'Clear contents of *_connectionparameters.json files'
   enabled: true
 
+- powershell: |
+   del $(Build.ArtifactStagingDirectory)\${{parameters.solutionName}}.zip
+   del $(Build.ArtifactStagingDirectory)\${{parameters.solutionName}}_managed.zip
+  displayName: 'Delete solution zip files'
+  enabled: true
+  
 # TEMPORARY until SolutionPackager supports formatting json files on unpack we
 # update all the json files to be pretty-print / formatted so they are easier to read in source control.
 # This also makes it easier to read changes from one commit to another
