--- a/Pipelines/Templates/set-deployment-configuration-paths.yml
+++ b/Pipelines/Templates/set-deployment-configuration-paths.yml
@@ -5,27 +5,35 @@ parameters:
   type: string
 steps:
 - powershell: Get-ChildItem -Path "${{ parameters.configPath }}" -recurse
+
   #Check for deployment settings for this environment
 - powershell: |
 
     $settingFiles = @("deploymentSettings","customDeploymentSettings")
-
+    $environmentName = '${{ parameters.environmentName }}'
+    #Temporary workaround for naming convention mismatches. Needs to fix this issue with convention vs. configuration. This will be cleaned up in the next release via https://github.com/microsoft/coe-starter-kit/issues/1960
+    if($environmentName -eq 'Validate') { $environmentName = 'Validation' }
+    if($environmentName -eq 'Production') { $environmentName = 'Prod' }
+    
     foreach ($settingFile in $settingFiles) {
         $deploymentSettingsPath = ''
-        $path = "${{ parameters.configPath }}$settingFile-${{ parameters.environmentName }}.json"
+        $path = "${{ parameters.configPath }}$settingFile-$environmentName.json"
+        Write-Host "Artifact Path: $path"
         if(Test-Path $path)
         {
             $deploymentSettingsPath = $path
         }
         else
         {
-            $path = "${{ parameters.configPath }}${{ parameters.environmentName }}\$settingFile.json"
+            $path = "${{ parameters.configPath }}$environmentName\$settingFile.json"
+            Write-Host "Environment Path: $path"
             if(Test-Path $path) {
                 $deploymentSettingsPath = $path
             }
             else
             {
                 $path = "${{ parameters.configPath }}$settingFile.json"
+                Write-Host "Default Path: $path"
                 if(Test-Path $path)
                 {
                     $deploymentSettingsPath = $path
