Commented the deploy part to just test the build part.

--- a/Pipelines/Templates/build-deploy-Solution-To-Environment.yml
+++ b/Pipelines/Templates/build-deploy-Solution-To-Environment.yml
@@ -12,8 +12,8 @@ stages:
     steps:
     - template: build-unmanaged-managed-Solution.yml
 
-    - template: deploy-Solution.yml
-      parameters:
-        serviceConnection: '$(ServiceConnection)'
-        importUnmanaged: '$(ImportUnmanaged)'
-        skipBuildToolsInstaller: 'true'
+#    - template: deploy-Solution.yml
+#     parameters:
+#       serviceConnection: '$(ServiceConnection)'
+#       importUnmanaged: '$(ImportUnmanaged)'
+#       skipBuildToolsInstaller: 'true'
