--- a/Pipelines/build-deploy-test-SampleSolution.yml
+++ b/Pipelines/build-deploy-test-SampleSolution.yml
@@ -26,4 +26,4 @@ variables:
   value: 'SampleSolutionName' #Replace with the actual name of the solution you are building. (NOTE: Not the Display Name)
 
 stages:
-- template: Pipelines\Templates\build-deploy-Solution-To-Environment.yml@PipelineRepo #The @PipelineRepo tells the pipeline where to look for the templates based on the name of the repo you specified above
+- template: Pipelines\Templates\build-deploy-Solution-To-Environment.yml #@PipelineRepo #The @PipelineRepo tells the pipeline where to look for the templates based on the name of the repo you specified above
